src/scss/main.scss
@import "_colors.scss";

.hero-main {
  background-image: url(/dist/img/DSC_0054.JPG);
  height: 100vh;
}

#we-provide {
  background-color: $silver;
}

#trekking-destinations {
  background-color: $belige-hole;
}

#contact-us > div {
  background-image: url(/dist/img/DSC_0329.JPG);
}

.icon-button-2x {
  width: 72px;
  height: 72px;
}

.uk-card-hover {
  transition: all 500ms;
}

.uk-card-hover:hover {
  transform: translateY(-5%);
}

// Dropdown content in tile
a.text-black {
  color: #999 !important;
}

#book-button-sticky {
  position: fixed;
  top: 90vh;
  right: 1px;
}

